# ristux

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-GPL-2.0  LICENSE-MIT  Makefile  README.md
.cargo/: config.toml
docs/: abi.md  utm.md
kernel/: Cargo.toml  linker.ld
rootfs/: installed-boot-manifest.txt  installer-manifest.txt  manifest.txt
scripts/: build_cargo_git_fixture.sh  build_dropbear_port.sh  build_iso.sh  build_newlib_sysroot.sh  build_official_rust_std_probe.sh  build_ristux_git_upload_pack.sh  build_ristux_ssh.sh  (+15 more)
toolchain/ristux-git-upload-pack/: Cargo.toml
toolchain/ristux-git-upload-pack/src/: main.rs
toolchain/ristux-ssh/: Cargo.toml  README.md
toolchain/ristux-ssh/src/: main.rs
userland/: Cargo.toml  cat.S  chmod.S  echo.S  false.S  init.S  kill.S  libc.S  linker.ld  ls.S  mkdir.S  pwd.S  rm.S  touch.S  true.S  udp.S
userland/.cargo/: config.toml
userland/c/: linker.ld
userland/c/crt/: crt0.S
userland/c/include/: assert.h  crypt.h  ctype.h  dirent.h  errno.h  fcntl.h  grp.h  inttypes.h  libgen.h  libutil.h  limits.h  math.h  netdb.h  paths.h  poll.h  pty.h  pwd.h  setjmp.h  shadow.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  syslog.h  termios.h  time.h  unistd.h  util.h  utime.h
userland/c/include/arpa/: inet.h
userland/c/include/linux/: futex.h
userland/c/include/netinet/: in.h  in_systm.h  ip.h  tcp.h
userland/c/include/sys/: ioctl.h  mman.h  param.h  random.h  resource.h  select.h  socket.h  stat.h  statfs.h  syscall.h  time.h  times.h  types.h  uio.h  un.h  utsname.h  wait.h
userland/c/libc/: libc.c
userland/src/: alloc_impl.rs  installer_support.rs  io.rs  lib.rs  prelude.rs  probe_output.rs  sys.rs
(+137 files in other folders)
